Convert all Kotlin sources to Java and base off of JDK11 compiler